# cppraw

./: .gitignore  CMakeLists.txt  test.glade
src/: CMakeLists.txt  CustomSlider.cpp  CustomSlider.h  DoubleImage.cpp  DoubleImage.h  DoubleImageLoader.cpp  DoubleImageLoader.h  ImageAdjustments.h  main.cpp
